--- a/index.html
+++ b/index.html
@@ -1,104 +1,115 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jeff's Website</title>
-  </head>
-  <body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Vimal Raj | AI & ML Engineering Student</title>
+    </head>
+    <body>
+        <canvas id="bg"></canvas>
 
-    <canvas id="bg"></canvas>   
+        <main>
+            <header>
+                <h1>Vimal Raj</h1>
+                <p>
+                    AI & Machine Learning Engineering Student • Problem Solver •
+                    Competitive by Nature
+                </p>
+            </header>
 
-    <main>
+            <blockquote>
+                <p>
+                    Building intelligence with code, discipline from sports, and
+                    curiosity across domains.
+                </p>
+            </blockquote>
 
-      <header>
-        <h1>Jeff Delaney</h1>
-        <p>🚀 Welcome to my website!</p>
-      </header>
+            <section>
+                <h2>📜 Manifesto</h2>
+                <p>
+                    I’m an AI and Machine Learning engineering student currently
+                    pursuing my bachelor’s degree, driven by a deep interest in
+                    understanding how systems — technical, biological, and
+                    business — actually work.
+                </p>
 
+                <p>
+                    Before college, I represented my school football team and
+                    learned the value of discipline, teamwork, and performing
+                    under pressure. Today, that same mindset shapes how I
+                    approach problem-solving, learning, and building with
+                    technology.
+                </p>
 
-      <blockquote>
-        <p>I like making stuff and putting it on the internet</p>
-      </blockquote>
+                <p>
+                    I enjoy working at the intersection of logic and creativity,
+                    where ideas are tested, broken, and refined into solutions
+                    that matter.
+                </p>
+            </section>
 
-      <section>
-        <h2>📜 Manifesto</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+            <section class="light">
+                <h2>👩🏽‍🚀 Projects</h2>
 
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+                <p>
+                    I’ve built AI-powered applications including chatbots,
+                    database-driven systems, and retrieval-augmented assistants
+                    using Python, FastAPI, and modern AI APIs. My focus is on
+                    turning concepts into working systems, not just demos.
+                </p>
 
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+                <h2>🏆 Accomplishments</h2>
 
-      </section>
+                <p>
+                    Winner of two hackathons and Top 15 at a national-level
+                    hackathon. Competitive environments push me to think
+                    clearly, adapt quickly, and execute effectively.
+                </p>
+            </section>
 
-      <section class="light">
-        <h2>👩🏽‍🚀 Projects</h2>
+            <blockquote>
+                <p>
+                    “Never give up.” <br />
+                    – John Cena
+                </p>
+            </blockquote>
 
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+            <section class="left">
+                <h2>🌮 Beyond Code</h2>
 
-        <h2>🏆 Accomplishments</h2>
+                <h3>Sports & Competition</h3>
+                <p>
+                    I prefer sports over movies and series — especially
+                    football, cricket, and basketball. Representing my school
+                    team and competing against senior players taught me
+                    resilience and mental strength.
+                </p>
 
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+                <h3>From Football Grounds to Hackathons</h3>
+                <p>
+                    In college, that competitive spirit shifted from football
+                    tournaments to hackathons, where problem-solving replaced
+                    physical play but the intensity remained the same.
+                </p>
 
-      </section>
+                <h3>Interests Beyond Technology</h3>
+                <p>
+                    Alongside AI and software engineering, I have a keen
+                    interest in physics and biology. I enjoy connecting ideas
+                    across fields, believing that strong solutions often come
+                    from interdisciplinary thinking.
+                </p>
+            </section>
 
-      <blockquote>
-        <p>The best way out is always through <br>-Robert Frost</p>
-      </blockquote>
+            <blockquote>
+                <p>
+                    Thanks for scrolling. <br />
+                    Curiosity, discipline, and persistence define my work.
+                </p>
+            </blockquote>
+        </main>
 
-      <section class="left">
-        <h2>🌮 Work History</h2>
-
-        <h3>McDonalds</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h3>Burger King</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h3>Taco Bell</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-      </section>
-
-      <blockquote>
-        <p>Thanks for watching!</p>
-      </blockquote>
-
-
-    </main>
-    
-    <script type="module" src="/main.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </body>
+        <script type="module" src="/main.js"></script>
+    </body>
 </html>
